--- a/.skhdrc
+++ b/.skhdrc
@@ -51,7 +51,7 @@ alt + shift - 0 : yabai -m space --balance
 
 # change layout of desktop
 alt - e : yabai -m space --layout bsp
-alt - l : yabai -m space --layout float
+alt - m : yabai -m space --layout float
 alt - s : yabai -m space --layout stack
 
 # cycle through stack windows
@@ -80,6 +80,13 @@ alt - f : yabai -m window --toggle zoom-fullscreen
 
 # toggle window native fullscreen
 alt + shift - f : yabai -m window --toggle native-fullscreen
+
+# Create space on the active display
+alt - n : yabai -m space --create
+
+# Toggle floating/bsp
+ctrl - o         : yabai -m config focus_follows_mouse autofocus
+ctrl - p  : yabai -m config focus_follows_mouse off
 
 # increase window size
 shift + alt - a : yabai -m window --resize left:-20:0
