--- a/.yabairc
+++ b/.yabairc
@@ -76,12 +76,15 @@ yabai -m config mouse_modifier ctrl
 yabai -m config mouse_action1 move
 yabai -m config mouse_action2 resize
 
+# floating windows are always on top (default: off)
+yabai -m config window_topmost off
+
 # Unmanaged
 yabai -m rule --add app="^(Calculator|System Settings|Archive Utility)$" manage=off
 # Web browsers
 yabai -m rule --add app="^(Safari|Firefox)$" space=1
 # IDE 
-yabai -m rule --add app="^(Code|Xcode)$" space=4
+yabai -m rule --add app="^(Code)$" space=4
 # Terminal
 yabai -m rule --add app="^(iTerm2)$" space=3
 # Music
@@ -91,6 +94,6 @@ yabai -m rule --add app="^(Calendar)$" space=10
 # Social
 yabai -m rule --add app="^(Slack|Microsoft Teams|Discord)$" space=5
 yabai -m rule --add app="^(Signal)$" space=16
-#Disassemblers
-yabai -m rule --add app="^(Binary Ninja)$" space=9
-yabai -m rule --add app="^(ida64)$" space=11
+# Misc
+yabai -m rule --add app="^(Word)$" space=6
+yabai -m rule --add app="^(draw.io)$" space=7
