--- a/.skhdrc
+++ b/.skhdrc
@@ -35,6 +35,14 @@ alt + shift - 7 : yabai -m window --space 7
 alt + shift - 8 : yabai -m window --space 8
 alt + shift - 9 : yabai -m window --space 9
 alt + shift - 0 : yabai -m window --space 10
+alt + shift + cmd - 1 : yabai -m window --space 11
+alt + shift + cmd - 2 : yabai -m window --space 12
+alt + shift + cmd - 3 : yabai -m window --space 13
+alt + shift + cmd - 4 : yabai -m window --space 14
+alt + shift + cmd - 5 : yabai -m window --space 15
+alt + shift + cmd - 6 : yabai -m window --space 16
+
+
 
 # Spawn a new iTerm window
 alt + shift - return : osascript -e 'tell application "iTerm" to (create window with default profile)'
@@ -99,3 +107,6 @@ shift + cmd - a : yabai -m window --resize left:20:0
 shift + cmd - s : yabai -m window --resize bottom:0:-20
 shift + cmd - w : yabai -m window --resize top:0:20
 shift + cmd - d : yabai -m window --resize right:-20:0
+
+# restart yabai
+ctrl + alt + cmd - r : yabai --restart-service
